# plantrace

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/benchmark_results/: querylens_benchmark_1000.csv  querylens_benchmark_1000.json  querylens_benchmark_10000.csv  querylens_benchmark_10000.json  querylens_benchmark_100000.csv  querylens_benchmark_100000.json  querylens_benchmark_50000.csv  querylens_benchmark_50000.json  regression_eval.csv  regression_eval.json
backend/tests/: conftest.py  test_ai_investigation.py  test_benchmark_runner.py  test_consumer_reliability.py  test_diagnostics.py  test_placement.py  (+3 more)
collector/: CMakeLists.txt  Dockerfile
collector/include/: collector.hpp
collector/proto/: telemetry.proto
collector/src/: explain.cpp  fingerprint.cpp  main.cpp  safety.cpp  sql_normalizer.cpp  vector_detector.cpp
docs/: AI_INVESTIGATOR.md  ARCHITECTURE.md  BENCHMARKS.md  BENCHMARK_SUMMARY.md  DEMO.md  IMPLEMENTATION_STATUS.md  OPERATIONS.md  PORTFOLIO_PROOF.md  README_CHECKLIST.md  RECOMMENDATIONS.md  REGRESSION_EVALUATION.md  REGRESSION_RULES.md  SEEDED_REGRESSION_DEMO.md
frontend/: Dockerfile  index.html  tailwind.config.js  vite.config.ts
infra/: prometheus.yml
scripts/: benchmark_ingestion.py  evaluate_placement.py  evaluate_query_investigator.py  evaluate_regression_detection.py  generate_benchmark_summary.py  run_benchmark.py
(+61 files in other folders)
